infrastructure/victoria-logs/overlays/nishir/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: victoria-logs
  namespace: monitoring-system
spec:
  gatewayClassName: victoria-logs
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-logs
            group: ""
            kind: Secret
