infrastructure/victoria-logs/overlays/nishir/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: monitoring-system
spec:
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /insert
      backendRefs:
        - name: vlogs-vlinsert
          port: 9481
    - backendRefs:
        - name: vlogs-vlselect
          port: 9471
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-redirect
  namespace: monitoring-system
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
