infrastructure/victoria-logs/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: monitoring-system
spec:
  hostnames:
    - logs.i.shikanime.studio
  parentRefs:
    - name: victoria-logs
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-redirect
  namespace: monitoring-system
spec:
  hostnames:
    - logs.i.shikanime.studio
  parentRefs:
    - name: victoria-logs
      sectionName: http
